@@ -1,3 +1,8 @@
+2001-11-26  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 02547] "message/*" as a kind of text type
+	* file.c (is_text_type): add message/*
+
 2001-11-25  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
 	* [w3m-dev 02535] Name conflicts in configure
